# wau

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  cicd.yml  deploy.yml  doc.yml  fmt-clippy.yml  snyk-check-code.yml  style.yml  test.yml
docs/: WAU_RS_PLAN.md
examples/: cli.md  config.toml  lock.toml  manifest.toml
examples/toc/: colorful.toc  curseforge.toc  dependencies.toc  flavor-specific.toc  multi-client.toc  simple.toc
libwau/: Cargo.toml
libwau/src/: error.rs  lib.rs  toc.rs
libwau/src/fs/: mod.rs  tests.rs
libwau/src/lock/: mod.rs  tests.rs
libwau/src/manifest/: mod.rs  tests.rs
libwau/src/model/: mod.rs  tests.rs
libwau/src/ops/: mod.rs  tests.rs
libwau/src/providers/: curse.rs  curseforge.rs  github.rs  local.rs  mod.rs  tests.rs  wowinterface.rs
libwau/src/resolve/: mod.rs  tests.rs
libwau/src/toc/: mod.rs  tests.rs
libwau/tests/: examples.rs  install.rs
src/: cli.rs  config.rs  lib.rs  main.rs
src/providers/: curse.rs
tests/: Cargo.toml
tests/src/: curse_tests.rs  lib.rs
wau/: Cargo.toml  config.toml  manifest.toml
wau/src/: cli.rs  config.rs  main.rs  manifest.rs
wau/src/app/: mod.rs  tests.rs
wau/src/cli/: mod.rs  tests.rs
wau/src/config/: mod.rs  tests.rs
wau/src/logger/: mod.rs  tests.rs
wau/src/output/: mod.rs  tests.rs
wau/src/settings/: mod.rs  tests.rs
