[package]
name = "wau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_repr = "0"
chrono = { version = "0", features = ["serde"] }
# chrono-tz = "0"
toml = { version = "0", default-features = false, features = ["parse"] }
dirs = "5"
# shellexpand = "3"

# colors feature can be used for pretty output
clap = { version = "4", features = ["derive"] }
rand = "0.8.5"
log = "0.4.21"
