[workspace]
members = ["libwau", "wau", "tests"]
resolver = "2"

[workspace.package]
authors = ["gigas002 <gigas002@pm.me>"]
homepage = "https://github.com/Gigas002/wau"
description = "World of Warcraft Addon Updater"
keywords = ["wow", "warcraft", "cli", "addon", "updater"]
license = "GPL-3.0-only"
repository = "https://github.com/Gigas002/wau"
version = "0.1.0"
edition = "2021"
