[package]
name = "libwau"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# # serde_repr = "0"
chrono = { version = "0", features = ["serde"] }
# # chrono-tz = "0"
