[package]
name = "libwau"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.27"
