[package]
name = "tests"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dev-dependencies]
libwau = { path = "../libwau" }
uuid = { version = "1", features = ["v4", "fast-rng"] }
