[package]
name = "wau"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libwau = { path = "../libwau" }

clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
