[package]
name = "wau"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["local", "curseforge", "wowinterface", "github"]
local = ["libwau/local"]
curseforge = ["libwau/curseforge"]
wowinterface = ["libwau/wowinterface"]
github = ["libwau/github"]

[dependencies]
libwau = { path = "../libwau", default-features = false }

clap = { version = "4", features = ["derive"] }
thiserror = "2"
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
dirs = "6.0"
